Fix feedback overflow

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -5333,6 +5333,8 @@
 }
 
 .dlf-pg-feedback__prompt {
+  max-width: 100%;
+  box-sizing: border-box;
   width: 960px;
   margin: 0 auto;
   padding: 10px 15px 0;
